--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./dist/index.js",
+    "server": "nodemon ./dist/index.js --ignore client/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "dotenv": "^6.0.0",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
-    "prisma": "^1.15.1"
+    "prisma": "^1.15.1",
+    "prisma-binding": "^2.1.5"
   }
 }
