--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.1.1",
     "@types/reach__router": "^1.0.1",
+    "@types/styled-components": "^3.0.0",
     "apollo": "^1.9.1",
     "apollo-boost": "^0.1.15",
     "graphql": "^14.0.0",
