--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@types/styled-components": "^3.0.0",
     "apollo": "^1.9.1",
     "apollo-boost": "^0.1.15",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "^14.0.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
