--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-cache-persist": "^0.1.1",
     "graphql": "^14.0.0",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
