--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^6.0.0",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
-    "prisma": "^1.15.1",
-    "prisma-binding": "^2.1.5"
+    "prisma": "^1.16.2",
+    "prisma-binding": "^2.1.5",
+    "prisma-cli": "^1.0.7"
   }
 }
